--- a/src/index.scss
+++ b/src/index.scss
@@ -1217,3 +1217,684 @@ h1{
     margin: 0 auto;
     margin-top: 20px;
 }
+
+
+
+//diler 
+.diler{
+    position: relative;
+    //head
+    &-head{
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+        //title
+        &-title{
+            h1{
+                margin: 0;
+                padding: 0;
+                text-align: left;
+                margin-bottom: 10px;
+                @media(max-width:768px){
+                    font-size: 22px;
+                }
+            }
+            P{
+                font-weight: 500;
+                color: #e45118;
+                span{
+                    font-size: 20px;
+                }
+                
+            }
+           
+        }
+    }
+}
+
+//transfer-btn
+.transfer-btn{
+    height: 45px;
+    max-width: 150px;
+    width: 100%;
+    border-radius: 25px;
+    background-color: #22c445;
+    border: none;
+    color: #fff;
+    position: relative;
+    cursor: pointer;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    transition: .3s;
+    span{
+        position: relative;
+        left: -10px;
+    }
+    img{
+        position: absolute;
+        right: -5px;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+    &:hover{
+        transform: translateY(-3px);
+        transition: .3s;
+    }
+    &:active{
+        transform: translateY(3px);
+    }
+}
+
+
+//transfer-team-list
+.transfer-team-list{
+    padding: 20px 0px;
+    margin-bottom: 40px;
+    // border-top: 1px solid rgb(102,102,102,.5);
+    // border-bottom: 1px solid rgb(102,102,102,.5);
+    h2{
+        font-size: 20px;
+        margin-bottom: 20px;
+    }
+    ul{
+        display: flex;
+        flex-direction: column;
+        @media(max-width:767px){
+            overflow: hidden;
+            overflow-x: auto;
+        }
+        li{
+            @media(max-width:767px){
+               overflow: hidden;
+               overflow-x: auto;
+               width: 500px;
+            }
+            &:first-of-type{
+                border-top:1px solid #ccc;
+            }
+            height: 40px;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            column-gap: 10px;
+            border-bottom: 1px solid #ccc;
+            padding-right: 20px;
+            span{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                column-gap: 10px;
+                &:first-of-type{
+                    width: 40px;
+                    @media(max-width:767px){
+                        width: 50px;
+                        text-wrap: nowrap;
+                    }
+                }
+                &:nth-of-type(2){
+                    flex: 4;
+                    text-align: left;
+                    
+                    @media(max-width:767px){
+                        width: 200px;
+                        text-wrap: nowrap;
+                     }
+                }
+                &:nth-of-type(3){
+                    flex: 4;
+                    justify-content: flex-start;
+                    svg{
+                        fill: #22c445;
+                    }
+                    @media(max-width:767px){
+                        width: 50px;
+                        text-wrap: nowrap;
+                    }
+                }
+                
+                &:nth-of-type(4){
+                    width: 35px;
+                    height: 35px;
+                    background-color: rgb(224, 224, 45);
+                    border-radius: 50%;
+                    @media(max-width:767px){
+                        width: 35px;
+                        
+                        text-wrap: nowrap;
+                    }
+                }
+                &:nth-of-type(5){
+                    width: 35px;
+                    height: 35px;
+                    background-color: rgb(197, 43, 43);
+                    border-radius: 50%;
+                    color: #fff;
+                    @media(max-width:767px){
+                        width: 35px;
+                        text-wrap: nowrap;
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+//transfer-modal
+.transfer-modal{
+    position: fixed;
+    bottom:0;
+    display: none;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    transition: .5s;
+    display: none;
+    backdrop-filter: blur(2px);
+    background-color: rgb(0,0,0,.5);
+    &.active{
+        display: block;
+    }
+    .container{
+        @media(max-width:350px){
+            padding:0 10px ;
+            padding-top: 40px;
+        }
+    }
+    //wrapper
+    &-wrapper{
+        position: absolute;
+        bottom: -100%;
+        background-color: #fff;
+        width: 100%;
+        height: 80vh;
+        transition: .3s;
+        .close-modal{
+            position: absolute;
+            top: 5px;
+            right: 20px;
+            width: 40px;
+            height: 40px;
+            font-size: 40px;
+            background-color: rgb(255,255,255,.1);
+            border-radius: 50%;
+            border: none;
+            outline: none;
+            color: #191919;
+            cursor: pointer;
+            right: 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        &.block{
+            transition: .5s;
+            bottom: 0%;
+        }
+        &.top{
+            transition: .3s;
+            height: calc(100vh - 30px);
+            .top-arrow{
+                    transition: .3s;
+                    transform-origin: center;
+                    transform:translateX(-50%) rotate(180deg);
+                    border: none;
+                    border-bottom: 2px solid rgb(0,0,0,.1);
+            }
+        }
+        
+        .top-arrow{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: absolute;
+            top: -24px;
+            left: 50%;
+            transform: translateX(-50%);
+            background-repeat: no-repeat;
+            background-size: 30px;
+            background-position: center;
+            width: 50px;
+            height: 50px;
+            background-color: #fff;
+            border-radius: 50%;
+            border-top: 2px solid rgb(0,0,0,.1);
+            cursor: pointer;
+        }
+        h3{
+            font-size: 20px;
+            color: #191919;
+            margin-bottom: 50px;
+            text-align: center;
+            @media(max-width:400px){
+                font-size: 18px;
+                text-align: center;
+            }
+        }
+        //flex
+        &-flex{
+            display: flex;
+            column-gap: 20px;
+            justify-content: space-between;
+            @media(max-width:1000px){
+                flex-direction: column;
+                row-gap: 40px;
+            }
+            form{
+                display: flex;
+                flex-direction: column;
+                max-width: 320px;
+                width: 100%;
+                @media(max-width:1000px){
+                    display: grid;
+                    grid-template-columns: 1fr 1fr;
+                    max-width: 100%;
+                    column-gap: 15px;
+                }
+                .check-other-team-player{
+                    display: flex;
+                    align-items: center;
+                    cursor: pointer;
+                    column-gap: 20px;
+                    margin-bottom: 20px;
+                    width: 100%;
+                    @media(max-width:1000px){
+                        grid-column: 1 / -1;
+                    }
+                    span{
+                        font-size: 14px;
+                    }
+                }
+                input{
+                    max-width: 320px;
+                    width: 100%;
+                    height: 40px;
+                    border-radius: 10px;
+                    padding: 0 10px;
+                    font-size: 16px;
+                    margin-bottom: 20px;
+                    border: 1px solid #ccc;
+                    &[type=checkbox]{
+                        width: 23px;
+                        height: 23px;
+                        margin-bottom: 0;
+                        cursor: pointer;
+                    }
+                    &:focus{
+                        border-color: #05c494;
+                        outline: none;
+                    }
+                    @media(max-width:1000px){
+                        max-width: 100%;
+                    }
+                    @media(max-width:540px){
+                        font-size: 14px;
+                    }
+                    @media(max-width:400px){
+                        &[type=number]{
+                            grid-column: 1 / -1;
+                        }
+                    }
+                }
+                select{
+                    width: 100%;
+                    height: 40px;
+                    font-size: 14px;
+                    border-radius: 10px;
+                    border: 1px solid #ccc;
+                    margin-bottom: 20px;
+                    padding: 0 10px;
+                   
+                    option{
+                        width: 100%;
+                        max-width: 320px;
+                        height: 40px;
+                    }
+                }
+                // button
+                button{
+                    width: 100%;
+                    height: 40px;
+                    border-radius: 10px;
+                    border: none;
+                    outline: none;
+                    &:focus{
+                        border:1px solid #05c494;
+                    }
+                    color: #fff;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    background-color: #22c445;
+                    @media(max-width:1000px){
+                        grid-column: 1 / -1;
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+.select-title{
+    margin-top: 50px;
+    margin-bottom: 30px;
+    color: #dd4343;
+}
+
+//transfer-man-wrapper
+.transfer-man-wrapper{
+   
+    position: relative;
+    @media(max-width:1000px){
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    img{
+        @media(max-width:1000px){
+            height: 300px;
+        }
+        @media(max-width:540px){
+            height: 250px;
+        }
+    }
+    span{
+        position: absolute;
+        left: 0;
+        top: 30px;
+        color: #191919;
+        font-size: 20px;
+        font-weight: 600;
+        display: flex;
+        flex-direction: column;
+        row-gap: 5px;
+        @media(max-width:1000px){
+            left: 200px;
+        }
+        @media(max-width:850px){
+            left: 100px;
+        }
+        @media(max-width:640px){
+            left: 50px;
+        }
+        @media(max-width:540px){
+            font-size: 16px;
+        }
+        @media(max-width:400px){
+            left: 0;
+        }
+        img{
+            @media(max-width:1000px){
+                height: 50px;
+            }
+            @media(max-width:540px){
+                height: 30px;
+                width: 50px;
+            }
+        }
+        &.transfer-man-wrapper-lastname{
+            left: auto;
+            right: 0;
+            top:50%;
+            max-width: 200px;
+            width: 100%;
+            text-align: right;
+            align-items: flex-end;
+           
+            img{
+                transform: scale(-1,1);
+            }
+            @media(max-width:1000px){
+                right: 200px;
+                left: auto;
+            }
+            @media(max-width:850px){
+                right: 100px;
+            }
+            @media(max-width:640px){
+                right: 50px;
+            }
+            @media(max-width:400px){
+                right: 0;
+            }
+        }
+        &.transfer-man-wrapper-age{
+            top:70%;
+            img{
+                transform: scale(1,-1);
+            }
+            @media(max-width:1000px){
+                left: 200px;
+            }
+            @media(max-width:850px){
+                left: 100px;
+            }
+            @media(max-width:640px){
+                left: 50px;
+            }
+            @media(max-width:540px){
+                left: 10px;
+                top: 75%;
+            }
+        }
+    }
+}
+
+.select-out-player{
+    @media(max-width:400px){
+        grid-column: 1 / -1;
+    }
+    .select-title{
+        display: block;
+        margin-bottom: 10px;
+        margin-top: 0;
+        @media(max-width:540px){
+            font-size: 14px;
+        }
+    }
+}
+
+
+.out-player{
+    opacity: .5;
+    pointer-events: none;
+}
+
+.alert-delete{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(19,19,19,.7);
+    backdrop-filter: blur(2px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    //wrapper
+    &-wrapper{
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 10px;
+        text-align: center;
+    }
+    h3{
+        margin-bottom: 10px;
+    }
+    li{
+        display: flex;
+        align-items: center;
+        column-gap: 10px;
+        justify-content: center;
+        margin-bottom: 10px;
+        svg{
+            fill: #070a0a;
+        }
+    }
+    button{
+        min-width: 70px;
+        height: 35px;
+        border-radius: 10px;
+        border: none;
+        background-color: transparent;
+        outline: none;
+        margin-top: 40px;
+        cursor: pointer;
+        transition: .3s;
+        &:hover{
+            transition: .3s;
+            transform: translateY(-3px);
+        }
+        &:first-of-type{
+            margin-right: 20px;
+            background-color: #22c445;
+            color: #fff;
+            font-size: 15px;
+            font-weight: 600;
+        }
+        &:last-of-type{
+            margin-right: 20px;
+            background-color: #dd4343;
+            color: #fff;
+            font-size: 15px;
+            font-weight: 600;
+        }
+    }
+    //alert-delete-join-player
+    &-join-player{
+        color:#22c445 ;
+        font-weight: 700;
+    }
+    &-out-player{
+        font-weight: 700;
+        color: #dd4343;
+    }
+}
+
+//transfer-draft
+.transfer-draft{
+    h2{
+        margin-bottom: 20px;
+    }
+
+    ul{
+        padding: 0 0 40px 0;
+        display: flex;
+        flex-direction: column;
+        row-gap: 20px;
+        li{
+            display: flex;
+            align-items: center;
+            font-size: 16px;
+            @media(max-width:482px){
+                flex-direction: column;
+            }
+            span:first-child{
+                margin-right: 20px;
+                font-weight: 700;
+                opacity: .7;
+                @media(max-width:482px){
+                    margin: 0;
+                }
+            }
+            span:nth-child(3){
+                margin-left: 20px;
+                font-weight: 700;
+                margin-right: 40px;
+                @media(max-width:482px){
+                    margin: 0;
+                }
+            }
+            .transfer-verify-btns{
+                display: flex;
+                margin-left: 10px;
+                @media(max-width:482px){
+                    margin-top: 20px;
+                    margin-left: 0;
+                }
+            }
+            .transfer-announce{
+                background-color: transparent;
+                border: 1px solid rgb(56, 197, 43);
+                cursor: pointer;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: 50%;
+                margin-right: 10px;
+                position: relative;
+                &::before{
+                    
+                    position: absolute;
+                    content: "Rasmiylashtirish";
+                    min-width:120px;
+                    font-size: 13px;
+                    top: -30px;
+                    left: -45px;
+                    background-color: rgb(0,0,0,.7);
+                    border-radius: 10px;
+                    padding: 2px ;
+                    color: #fff;
+                    display: none;
+                }
+                &:hover::before{
+                    display: block;
+                    @media(max-width:768px){
+                        display: none;
+                    }
+                }
+                svg{
+                    fill: #22c445;
+                    width: 30px;
+                    height: 30px;
+                }
+            }
+            .transfer-refusal{
+                background-color: transparent;
+                border: 1px solid rgb(197, 66, 43);
+                cursor: pointer;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: 50%;
+                margin-right: 10px;
+                position: relative;
+                &::before{
+                    position: absolute;
+                    content: "Bekor qilish";
+                    width:100px;
+                    font-size: 13px;
+                    top: -30px;
+                    left: -30px;
+                    background-color: rgb(0,0,0,.7);
+                    border-radius: 10px;
+                    padding: 2px 0;
+                    color: #fff;
+                    display: none;
+                }
+                &:hover::before{
+                    display: block;
+                    @media(max-width:768px){
+                        display: none;
+                    }
+                }
+                svg{
+                    fill: rgb(197, 66, 43);
+                    width: 30px;
+                    height: 30px;
+                }
+            }
+            //transfer-ended
+            &.transfer-ended{
+                padding: 5px 20px;
+                border-radius: 30px;
+                background-color: rgb(35, 212, 19);
+                order: 1;
+            }
+        }
+    }
+}
+
